--- a/SECTION 10 - GRIDS/Index_3.html
+++ b/SECTION 10 - GRIDS/Index_3.html
@@ -37,9 +37,9 @@
         .box3{
             justify-self: end;
         }
-        .box4{
-            
-        }
+        /* .box4{
+
+        } */
         
     </style>
 
