--- a/SECTION 10 - GRIDS/Index_2.html
+++ b/SECTION 10 - GRIDS/Index_2.html
@@ -46,9 +46,9 @@
     
   <article class="container">
 
-    <section class="box1">Lorem ipsum dolor sit.</section>
+    <section class="box1">box 1 Lorem ipsum dolor sit.</section>
 
-    <section class="box2">Lorem ipsum dolor sit amet consectetur 
+    <section class="box2">box 2 Lorem ipsum dolor sit amet consectetur 
         adipisicing elit. Officia, eos voluptatem. 
         Vero, corporis laborum ducimus quia maxime quas 
         earum adipisci veniam velit assumenda ipsa voluptate 
@@ -58,7 +58,8 @@
     </section>
 
     <section class="nested">
-        <div>Lorem</div>
+        
+        <div>box 3 Lorem</div>
         <div>Lorem</div>
         <div>Lorem</div>
         <div>Lorem</div>
