--- a/SECTION 10 - GRIDS/ChessBoard.html
+++ b/SECTION 10 - GRIDS/ChessBoard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Document</title>
     <style>
         header{
@@ -33,10 +34,10 @@
             color: white;
         }
         .main{
-            background: #ddd;
+            background: limegreen;
         }
         .side1{
-            background: #ddd;
+            background: limegreen;
         }
         .main1{
             background: red;
